<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_one"
            android:title="@string/first" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_two"
            android:title="@string/second" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_three"
            android:title="@string/third" />
    </group>


    <item android:title="@string/sub_items">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_one"
                    android:title="@string/sub_item_1" />
                <item
                    android:icon="@drawable/ic_two"
                    android:title="@string/sub_item_2" />
            </group>
        </menu>
    </item>

</menu>